coisa linda do pai

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -1,1 +1,9 @@
-<p>cartao works!</p>
+<div class="card" style="width: 18rem;">
+    <img src="caminho/para/imagem.jpg" class="card-img-top" alt="Descrição da imagem">
+    <div class="card-body">
+      <h5 class="card-title">Título do Cartão</h5>
+      <p class="card-text">Este é um exemplo de texto no cartão para ilustrar o uso do componente.</p>
+      <a href="#" class="btn btn-primary">Saiba mais</a>
+    </div>
+  </div>
+  
