--- a/projeto_2/src/app/app.component.html
+++ b/projeto_2/src/app/app.component.html
@@ -2,6 +2,9 @@
 
 <main class="container">
   <h1>taltaltal</h1>
+
+  <!-- Chamando o componente de cartão -->
+  <app-cartao></app-cartao>
 </main>
 
-<app-rodape></app-rodape> 
+<app-rodape></app-rodape>
