home praticamente pronto

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -1,9 +1,39 @@
-<div class="card" style="width: 18rem;">
-    <img src="caminho/para/imagem.jpg" class="card-img-top" alt="Descrição da imagem">
-    <div class="card-body">
-      <h5 class="card-title">Título do Cartão</h5>
-      <p class="card-text">Este é um exemplo de texto no cartão para ilustrar o uso do componente.</p>
-      <a href="#" class="btn btn-primary">Saiba mais</a>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+  <div class="col">
+    <div class="card">
+      <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <button type="button">vamos lá</button>
+      </div>
     </div>
   </div>
-  
+  <div class="col">
+    <div class="card">
+      <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://gamehall.com.br/wp-content/uploads/2018/02/Dark-Souls-III-KeyArt-Ember.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card">
+      <img src="https://store-images.s-microsoft.com/image/apps.58752.14133304522217995.34840b88-90ea-4d08-9ef7-ca05615091cd.71e3adbd-472e-4c07-9549-36b641f25ec3?q=90&w=336&h=200" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+      </div>
+    </div>
+  </div>
+</div>
