--- a/projeto_2/src/app/_components/corpo-site/corpo-site.component.html
+++ b/projeto_2/src/app/_components/corpo-site/corpo-site.component.html
@@ -1,1 +1,6 @@
-<p>corpo-site works!</p>
+<body>
+  <app-cabecalho></app-cabecalho>
+  <app-cartao></app-cartao>
+  <app-formulario></app-formulario>
+  <app-rodape></app-rodape>
+</body>
