--- a/projeto_2/src/app/app.component.html
+++ b/projeto_2/src/app/app.component.html
@@ -1,9 +1,5 @@
-<app-cabecalho></app-cabecalho>
-
-<main class="container">
-  <h1>taltaltal</h1>
-
+<app-corpo-site>
+  <app-cabecalho></app-cabecalho>
   <app-cartao></app-cartao>
-</main>
-
-<app-rodape></app-rodape>
+  <app-rodape></app-rodape>
+</app-corpo-site>
