--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -20,7 +20,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://gamehall.com.br/wp-content/uploads/2018/02/Dark-Souls-III-KeyArt-Ember.jpg" class="card-img-top" alt="...">
+      <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
@@ -29,7 +29,7 @@
   </div>
   <div class="col">
     <div class="card">
-      <img src="https://store-images.s-microsoft.com/image/apps.58752.14133304522217995.34840b88-90ea-4d08-9ef7-ca05615091cd.71e3adbd-472e-4c07-9549-36b641f25ec3?q=90&w=336&h=200" class="card-img-top" alt="...">
+      <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
