ajuste do tamanho dos cards

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -1,6 +1,6 @@
 <div class="row row-cols-1 row-cols-md-2 g-4">
   <div class="col">
-    <div class="card">
+    <div class="card custom-card">
       <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -10,7 +10,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card">
+    <div class="card custom-card">
       <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -19,7 +19,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card">
+    <div class="card custom-card">
       <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
@@ -28,7 +28,7 @@
     </div>
   </div>
   <div class="col">
-    <div class="card">
+    <div class="card custom-card">
       <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
