melhorias no header e botão

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -5,7 +5,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <button type="button">vamos lá</button>
+        <button class="game-button">
+          <i class="fas fa-gamepad"></i> Explorar jogo
+        </button>
       </div>
     </div>
   </div>
@@ -15,6 +17,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <button class="game-button">
+          <i class="fas fa-gamepad"></i> Explorar jogo
+        </button>
       </div>
     </div>
   </div>
@@ -24,6 +29,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        <button class="game-button">
+          <i class="fas fa-gamepad"></i> Explorar jogo
+        </button>
       </div>
     </div>
   </div>
@@ -33,6 +41,9 @@
       <div class="card-body">
         <h5 class="card-title">Card title</h5>
         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <button class="game-button">
+          <i class="fas fa-gamepad"></i> Explorar jogo
+        </button>
       </div>
     </div>
   </div>
