--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -1,8 +1,17 @@
-<nav class="navbar bg-dark text-white">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#" style="color: white;">
-      <img src="https://png.pngtree.com/png-vector/20211027/ourmid/pngtree-monkey-e-sports-logo-design-png-image_4013827.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-      Bootstrap
-    </a>
+<header class="header">
+  <div class="container">
+    <h1>Biblioteca de Jogos</h1>
+    <p>Descubra, explore e organize seus jogos favoritos</p>
+  </div>
+</header>
+
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <ul class="navbar-nav mx-auto">
+      <li class="nav-item"><a class="nav-link" href="#">Início</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Jogos</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Categorias</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
+    </ul>
   </div>
 </nav>
