--- a/projeto_2/src/app/_components/cartao/cartao.component.css
+++ b/projeto_2/src/app/_components/cartao/cartao.component.css
@@ -11,3 +11,18 @@
 .custom-card .card-body {
   padding: 0.5rem;
 }
+
+
+button {
+  background-color: #141416;
+  color: white;
+  justify-content: center;
+  align-items: center;
+  height: 10vh;
+  border-radius: 10px;
+}
+
+.game-button:hover {
+  transform: scale(1.1);
+  box-shadow: 0px 6px 25px rgb(144, 135, 219);
+}
