--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container">
-    <h1>Biblioteca de Jogos</h1>
-    <p>Descubra, explore e organize seus jogos favoritos</p>
+    <h1>Wiki de jogos</h1>
+    <p>Descubra, explore e aprenda sobre seus jogos favoritos</p>
   </div>
 </header>
 
@@ -10,7 +10,7 @@
     <ul class="navbar-nav mx-auto">
       <li class="nav-item"><a class="nav-link" href="#">Início</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Jogos</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Categorias</a></li>
+      <li class="nav-item"><a class="nav-link" href="#">login</a></li>
       <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
     </ul>
   </div>
