--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -1,17 +1,17 @@
 <header class="header">
-  <div class="container">
-    <h1>Wiki de jogos</h1>
-    <p>Descubra, explore e aprenda sobre seus jogos favoritos</p>
+  <div class="container d-flex justify-content-between align-items-center">
+    <div class="d-flex justify-content-center align-items-center flex-grow-1">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="mr-3" style="height: 100px;">
+      <div class="text-center">
+        <h1 class="mb-0">Questpedia</h1>
+        <p class="mb-0">Explore seu jogo favorito.</p>
+      </div>
+    </div>
+    <nav class="navbar navbar-expand-lg p-0 ml-auto">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link p-0" href="#">Login</a></li>
+        <li class="nav-item"><a class="nav-link p-0" href="#">Sobre</a></li>
+      </ul>
+    </nav>
   </div>
 </header>
-
-<nav class="navbar navbar-expand-lg">
-  <div class="container">
-    <ul class="navbar-nav mx-auto">
-      <li class="nav-item"><a class="nav-link" href="#">Início</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Jogos</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">login</a></li>
-      <li class="nav-item"><a class="nav-link" href="#">Sobre</a></li>
-    </ul>
-  </div>
-</nav>
