questpedia, nome foda né?

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -1,49 +1,93 @@
-<div class="row row-cols-1 row-cols-md-2 g-4">
-  <div class="col">
-    <div class="card custom-card">
-      <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <button class="game-button">
-          <i class="fas fa-gamepad"></i> Explorar jogo
-        </button>
+<div class="container my-5">
+  <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Clash Royale</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Gaste elixir na arena</a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card custom-card">
-      <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <button class="game-button">
-          <i class="fas fa-gamepad"></i> Explorar jogo
-        </button>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Cyberpunk 2077</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Conecte-se a Night City</a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card custom-card">
-      <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-        <button class="game-button">
-          <i class="fas fa-gamepad"></i> Explorar jogo
-        </button>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Dark Souls 3</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Busque as almas</a>
+        </div>
       </div>
     </div>
-  </div>
-  <div class="col">
-    <div class="card custom-card">
-      <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <button class="game-button">
-          <i class="fas fa-gamepad"></i> Explorar jogo
-        </button>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Red Dead Redemption 2</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Entre aos Van der Linde</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://svgsilh.com/svg/1106309.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">???</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">???</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://svgsilh.com/svg/1106309.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">???</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">???</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://svgsilh.com/svg/1106309.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">???</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">???</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://svgsilh.com/svg/1106309.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">???</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">???</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card custom-card">
+        <img src="https://svgsilh.com/svg/1106309.svg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">???</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">???</a>
+        </div>
       </div>
     </div>
   </div>
