--- a/projeto_2/src/app/_components/cartao/cartao.component.css
+++ b/projeto_2/src/app/_components/cartao/cartao.component.css
@@ -1,28 +1,9 @@
-.custom-card {
-  max-width: 45rem;
-
-}
-
-.custom-card img {
-
-  object-fit: cover;
-}
-
-.custom-card .card-body {
-  padding: 0.5rem;
-}
-
-
-button {
-  background-color: #141416;
+.btn-primary {
+  background-color: black;
   color: white;
-  justify-content: center;
-  align-items: center;
-  height: 10vh;
-  border-radius: 10px;
 }
 
-.game-button:hover {
+.btn-primary:hover {
+  background-color: black;
   transform: scale(1.1);
-  box-shadow: 0px 6px 25px rgb(144, 135, 219);
 }
