alteração nos cards e correções

--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -1,12 +1,12 @@
 <div class="container">
-  <div class="row row-cols-1 row-cols-md-3 g-4 justify-content-center">
+  <div class="row row-cols-1 row-cols-md-3 justify-content-center">
     <div class="col">
       <div class="card custom-card">
         <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Clash Royale</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Gaste elixir na arena</a>
+          <button href="#" class="game-button">Gaste elixir na arena</button>
         </div>
       </div>
     </div>
@@ -16,7 +16,7 @@
         <div class="card-body">
           <h5 class="card-title">Cyberpunk 2077</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Conecte-se a Night City</a>
+          <button href="#" class="game-button">Conecte-se a Night City</button>
         </div>
       </div>
     </div>
@@ -26,7 +26,7 @@
         <div class="card-body">
           <h5 class="card-title">Dark Souls 3</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Busque as almas</a>
+          <button href="#" class="game-button">Busque as almas</button>
         </div>
       </div>
     </div>
@@ -36,7 +36,7 @@
         <div class="card-body">
           <h5 class="card-title">Red Dead Redemption 2</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Entre aos Van der Linde</a>
+          <button href="#" class="game-button">Entre aos Van der Linde</button>
         </div>
       </div>
     </div>
@@ -46,7 +46,7 @@
         <div class="card-body">
           <h5 class="card-title">???</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <button href="#" class="game-button">???</button>
         </div>
       </div>
     </div>
@@ -56,7 +56,7 @@
         <div class="card-body">
           <h5 class="card-title">???</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <button href="#" class="game-button">???</button>
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@
         <div class="card-body">
           <h5 class="card-title">???</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <button href="#" class="game-button">???</button>
         </div>
       </div>
     </div>
@@ -76,7 +76,7 @@
         <div class="card-body">
           <h5 class="card-title">???</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <button href="#" class="game-button">???</button>
         </div>
       </div>
     </div>
@@ -86,7 +86,7 @@
         <div class="card-body">
           <h5 class="card-title">???</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <button href="#" class="game-button">???</button>
         </div>
       </div>
     </div>
