--- a/projeto_2/src/app/_components/corpo-site/corpo-site.component.css
+++ b/projeto_2/src/app/_components/corpo-site/corpo-site.component.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://blog.ebaconline.com.br/blog/wp-content/uploads/2022/12/kcnb4lkkucfipej3ngqxm-scaled-e1674744655926.jpeg);
+  background-image: url(https://st4.depositphotos.com/1605581/21841/i/450/depositphotos_218410722-stock-photo-abstract-cyan-blue-gradient-blur.jpg);
   background-size: cover;
   background-attachment: fixed;
   background-position: center;
