--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -3,7 +3,7 @@
     <div class="d-flex justify-content-center align-items-center flex-grow-1">
       <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="mr-3" style="height: 100px;">
       <div class="text-center">
-        <h1 class="mb-0">Questpédia ✰</h1>
+        <h1 class="mb-0">Quest'pedia ✰</h1>
         <p class="mb-0">Explore seu jogo favorito</p>
       </div>
     </div>
