--- a/projeto_2/src/app/_components/cartao/cartao.component.css
+++ b/projeto_2/src/app/_components/cartao/cartao.component.css
@@ -1,20 +1,21 @@
 .custom-card {
-  background-color: black;
-  color: white;
-  border: none;
+  background-color: white;
+  color: black;
+  border: 2px solid black;
+  border-radius: 15px;
   transition: all 0.3s ease-in-out;
 }
 
 .custom-card .card-body {
-  color: white;
+  color: black;
 }
 
 .custom-card .card-title {
-  color: white;
+  color: black;
 }
 
 .custom-card .card-text {
-  color: white;
+  color: black;
 }
 
 .custom-card .btn-primary {
@@ -28,6 +29,6 @@
   background-color: black;
   color: white;
   transform: scale(1.1);
-  box-shadow: 0 0 15px 5px rgba(146, 7, 201, 0.5);
+  box-shadow: 0 0 8px 2px rgba(146, 7, 201, 0.5);
   border: 2px solid #ff00ff;
 }
