--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -9,9 +9,31 @@
     </div>
     <nav class="navbar navbar-expand-lg p-0 ml-auto">
       <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link p-0" href="#">Login</a></li>
+        <!-- Link para abrir o modal de login -->
+        <li class="nav-item">
+          <a class="nav-link p-0" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+        </li>
         <li class="nav-item"><a class="nav-link p-0" href="#">Sobre</a></li>
       </ul>
     </nav>
   </div>
 </header>
+
+<!-- Modal de Login -->
+<div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="loginModalLabel">Login</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <!-- Referência ao componente de formulário de login -->
+        <app-formulario></app-formulario>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+      </div>
+    </div>
+  </div>
+</div>
