--- a/projeto_2/src/app/_components/rodape/rodape.component.html
+++ b/projeto_2/src/app/_components/rodape/rodape.component.html
@@ -46,4 +46,9 @@
     </label>
     <div class="mt-4 text-body">© 2025 IFRN</div>
   </div>
+
+  <button id="back-to-top" (click)="scrollToTop()">
+    ↑
+  </button>
+  
 </footer>
