--- a/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
+++ b/projeto_2/src/app/_components/cabecalho/cabecalho.component.html
@@ -1,22 +1,37 @@
 <header class="header bg-dark">
   <div class="container d-flex justify-content-between align-items-center">
+    <nav class="navbar navbar-expand-lg p-0">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link p-0 text-white" href="#">Favoritos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link p-0 text-white" href="#">Mago</a>
+        </li>
+      </ul>
+    </nav>
+
     <div class="d-flex justify-content-center align-items-center flex-grow-1">
       <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Pixel_art_Wizard_Portrait.png" alt="Logo" class="mr-3" style="height: 100px;">
       <div class="text-center">
-        <h1 class="mb-0">Quest'pedia ✰</h1>
-        <p class="mb-0">Explore seu jogo favorito</p>
+        <h1 class="mb-0 text-white">Quest'pedia ✰</h1>
+        <p class="mb-0 text-white">Explore seu jogo favorito</p>
       </div>
     </div>
+
     <nav class="navbar navbar-expand-lg p-0 ml-auto">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link p-0" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
+          <a class="nav-link p-0 text-white" href="#" data-bs-toggle="modal" data-bs-target="#loginModal">Login</a>
         </li>
-        <li class="nav-item"><a class="nav-link p-0" href="#">Sobre</a></li>
+        <li class="nav-item">
+          <a class="nav-link p-0 text-white" href="#">Sobre</a>
+        </li>
       </ul>
     </nav>
   </div>
 </header>
+
 <div class="modal fade" id="loginModal" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
