--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -42,19 +42,19 @@
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://e7.pngegg.com/pngimages/335/640/png-clipart-question-mark-question-mark.png" class="card-img-top" alt="...">
+        <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjo8pHJzE98c08GVxfI26_x9vlHYE-hpSi4hQpyswF4OUJeZ76uhsDoeKY3SlrPw6Utx5FY56Xjp-AobKX-eXcEItdGuBSQ81TLDb59y-DOoMGzOtkgI7V_ZDJ4AU3LRG_RY7WayucywvdC/s1600/capa.png" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">???</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <h5 class="card-title">JoJo's Bizzare Adventure: Heritage for the Future</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
           <a href="#" class="btn btn-primary">???</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://e7.pngegg.com/pngimages/335/640/png-clipart-question-mark-question-mark.png" class="card-img-top" alt="...">
+        <img src="https://funfactor.pt/wp-content/uploads/2018/07/chrono-trigger.jpeg?w=1280&h=720&crop=1" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">???</h5>
+          <h5 class="card-title">Chrono Trigger</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           <a href="#" class="btn btn-primary">???</a>
         </div>
