--- a/projeto_2/src/app/_components/cartao/cartao.component.html
+++ b/projeto_2/src/app/_components/cartao/cartao.component.html
@@ -5,7 +5,7 @@
         <img src="https://t2.tudocdn.net/366920?w=1920" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Clash Royale</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Duelos rápidos, estratégia afiada e reviravoltas épicas!! Cada carta pode mudar tudo. Você está pronto para a batalha?</p>
           <a href="#" class="btn btn-primary">Gaste elixir na arena</a>
         </div>
       </div>
@@ -15,7 +15,7 @@
         <img src="https://cdn1.epicgames.com/offer/77f2b98e2cef40c8a7437518bf420e47/EGS_Cyberpunk2077_CDPROJEKTRED_S1_03_2560x1440-359e77d3cd0a40aebf3bbc130d14c5c7" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Cyberpunk 2077</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Um futuro caótico, uma cidade sem leis e um mercenário em busca da imortalidade. Até onde você iria para se tornar uma lenda?</p>
           <a href="#" class="btn btn-primary">Conecte-se a Night City</a>
         </div>
       </div>
@@ -25,7 +25,7 @@
         <img src="https://store-images.s-microsoft.com/image/apps.61214.71827372323164480.6e97c7d2-899a-404f-8660-d622a7fc9162.740b1351-e659-486b-9d1c-948e0d928ead?q=90&w=480&h=270" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Dark Souls 3</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Cinzas e escuridão dominam um mundo à beira do fim. Você se erguerá para desafiar deuses e monstros ou sucumbirá às chamas?</p>
           <a href="#" class="btn btn-primary">Busque as almas</a>
         </div>
       </div>
@@ -35,7 +35,7 @@
         <img src="https://tm.ibxk.com.br/2024/06/18/18184036608373.jpg?ims=750x" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Red Dead Redemption 2</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">O Velho Oeste está morrendo, e com ele, os foras da lei. Em um mundo que não perdoa, você lutará para sobreviver ou será esquecido?</p>
           <a href="#" class="btn btn-primary">Entre aos Van der Linde</a>
         </div>
       </div>
@@ -45,8 +45,8 @@
         <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjo8pHJzE98c08GVxfI26_x9vlHYE-hpSi4hQpyswF4OUJeZ76uhsDoeKY3SlrPw6Utx5FY56Xjp-AobKX-eXcEItdGuBSQ81TLDb59y-DOoMGzOtkgI7V_ZDJ4AU3LRG_RY7WayucywvdC/s1600/capa.png" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">JoJo's Bizzare Adventure: Heritage for the Future</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <p class="card-text">Stand contra Stand!! O tempo está passando, você tem o que é preciso para mudar o "Mundo"?</p>
+          <a href="#" class="btn btn-primary">Derrote Dio Brando</a>
         </div>
       </div>
     </div>
@@ -55,18 +55,18 @@
         <img src="https://funfactor.pt/wp-content/uploads/2018/07/chrono-trigger.jpeg?w=1280&h=720&crop=1" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Chrono Trigger</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">Eras se entrelaçam! Viaje pelo tempo e enfrente ameaças que transcendem a história. Você conseguirá mudar o futuro?</p>
           <a href="#" class="btn btn-primary">???</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card custom-card">
-        <img src="https://e7.pngegg.com/pngimages/335/640/png-clipart-question-mark-question-mark.png" class="card-img-top" alt="...">
+        <img src="https://www.pichauarena.com.br/wp-content/uploads/2022/01/csgotr.jpg" class="card-img-top" alt="...">
         <div class="card-body">
-          <h5 class="card-title">???</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">???</a>
+          <h5 class="card-title">Counter-Strike: Global Offensive</h5>
+          <p class="card-text">Terroristas vs. Contra-Terroristas. Uma tensão incessante que com um único objetivo, espalhar o caos (ou impedir a mesma). Está preparado? </p>
+          <a href="#" class="btn btn-primary">Desarme (ou arme)</a>
         </div>
       </div>
     </div>
