--- a/projeto_2/src/app/_components/sobre/sobre.component.html
+++ b/projeto_2/src/app/_components/sobre/sobre.component.html
@@ -1,5 +1,7 @@
 <div class="container text-center">
-    <h2>Sobre o Quest'pedia</h2>
-    <p>O Quest'pedia é um guia interativo para explorar jogos, suas classes e mecânicas.</p>
+    <h2>O que é a Quest'pedia?</h2>
+    <p>A Quest'pedia é uma wiki onde você pode entender as histórias, objetos e personagens dos seus jogos favoritos!
+      Feito por alunos do IFRN-Parnamirim, somos entusiastas de jogos e, por meio deste projeto, estamos explorando um imenso mundo que construímos e ainda estamos construindo.
+    </p>
   </div>
   
