comitando pq vou fazer graça aq (testar services)

--- a/projeto_2/src/app/_components/sobre/sobre.component.html
+++ b/projeto_2/src/app/_components/sobre/sobre.component.html
@@ -1,7 +1,13 @@
 <div class="container text-center">
-    <h2>O que é a Quest'pedia?</h2>
-    <p>A Quest'pedia é uma wiki onde você pode entender as histórias, objetos e personagens dos seus jogos favoritos!
-      Feito por alunos do IFRN-Parnamirim, somos entusiastas de jogos e, por meio deste projeto, estamos explorando um imenso mundo que construímos e ainda estamos construindo.
-    </p>
-  </div>
-  
+  <h2>O que é a Quest'pedia?</h2>
+  <p>
+      A <strong>Quest'pedia</strong> é uma enciclopédia digital dedicada a reunir e explorar as ricas narrativas, 
+      personagens e objetos que compõem os universos dos jogos. De RPGs clássicos a FPS, de histórias envolventes 
+      a diversões rápidas, a Quest'pedia é o seu ponto de partida para mergulhar ainda mais fundo — como diria o mago Davy Jones.
+  </p>
+  <p>
+      Criada por alunos do <strong>IFRN - Campus Parnamirim</strong>, a Quest'pedia é um projeto feito por entusiastas, para entusiastas. 
+      Mais do que apenas catalogar informações, buscamos oferecer uma experiência envolvente, com análises detalhadas, conexões entre elementos 
+      das histórias e até curiosidades que podem passar despercebidas pelos jogadores.
+  </p>
+</div>
